--- a/index.html
+++ b/index.html
@@ -2,173 +2,68 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Validasi Angka Main (Auto API)</title>
+  <title>Validasi Data Publik dari Google Sheets</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
-    textarea, select, button {
-      font-size: 16px;
-      padding: 8px;
-      width: 100%;
-      margin-bottom: 10px;
-      box-sizing: border-box;
-    }
-    .table-container {
-      overflow-x: auto;
-      margin-top: 20px;
-    }
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      min-width: 600px;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
-      text-align: center;
-    }
-    .valid {
-      background-color: #c8e6c9;
-    }
-    .copy-btn {
-      margin-top: 10px;
-    }
+    body { font-family: Arial; padding: 20px; }
+    select, button { font-size: 16px; padding: 8px; margin: 5px 0; }
+    .table-container { overflow-x: auto; margin-top: 20px; }
+    table { border-collapse: collapse; width: 100%; min-width: 600px; }
+    th, td { padding: 8px; border: 1px solid #ccc; text-align: center; }
   </style>
 </head>
 <body>
+  <h2>Raw Data dari Google Sheets (Publik)</h2>
+  <label>Pilih AS (kolom B):</label>
+  <select id="asSelect">
+    <option value="">Semua</option>
+  </select>
+  <button onclick="loadData()">Muat Data</button>
 
-<h2>Validasi Angka Berdasarkan Angka Main (Google Sheet)</h2>
+  <div class="table-container">
+    <table id="tableData">
+      <thead><tr><th>AS</th><th>4D</th><th>3D</th><th>2D</th></tr></thead>
+      <tbody></tbody>
+    </table>
+  </div>
 
-<textarea id="angkaMain" rows="5" placeholder="Contoh:\n1234\n5678"></textarea>
-
-<label for="asFilter">Pilih AS (0–9):</label>
-<select id="asFilter">
-  <option value="">-- Tidak Difilter --</option>
-  ${[...Array(10).keys()].map(n => `<option value="${n}">AS ${n}</option>`).join('')}
-</select>
-
-<button onclick="validasi()">Tampilkan Semua yang Cocok</button>
-<button onclick="filterAS()">Tampilkan Hanya yang Cocok dengan AS</button>
-<button onclick="salinHasil()" class="copy-btn">Salin Hasil</button>
-
-<h3>Hasil Validasi</h3>
-<div class="table-container">
-  <table id="hasilTable">
-    <thead>
-      <tr><th>Jenis</th><th>Angka Prediksi</th><th>Cocok dengan Angka Main</th></tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-</div>
-
-<script>
-const sheetURL = 'https://docs.google.com/spreadsheets/d/18nXx5IcD80NT1xSkhNM4hcVmoxgzuhD0oioagDfBxBs/gviz/tq?tqx=out:json&sheet=Prediksi';
-let prediksi4D = [], prediksi3D = [], prediksi2D = [];
-
-function fetchData(callback) {
-  fetch(sheetURL)
-    .then(res => res.text())
-    .then(data => {
-      const json = JSON.parse(data.substring(47, data.length - 2));
-      const rows = json.table.rows;
-
-      prediksi4D = rows.map(r => r.c[2]?.v).filter(Boolean);
-      prediksi3D = rows.map(r => r.c[3]?.v).filter(Boolean);
-      prediksi2D = rows.map(r => r.c[4]?.v).filter(Boolean);
-
-      callback();
-    })
-    .catch(err => console.error("Gagal ambil data:", err));
-}
-
-function getAngkaMain() {
-  return document.getElementById("angkaMain").value.trim().split("\n")
-    .map(line => line.replace(/\D/g, '').slice(0, 8).split(""))
-    .filter(arr => arr.length > 0);
-}
-
-function cocokDenganAngkaMain(angka, angkaMain) {
-  return angkaMain.some(d => angka.includes(d));
-}
-
-function tampilkanHasil(hasil) {
-  const tbody = document.getElementById("hasilTable").querySelector("tbody");
-  tbody.innerHTML = hasil.length ? hasil.map(h =>
-    `<tr class="valid"><td>${h.jenis}</td><td>${h.angka}</td><td>${h.cocok}</td></tr>`
-  ).join("") : `<tr><td colspan="3">Tidak ada angka yang cocok</td></tr>`;
-}
-
-function filterByAS(array, asDigit) {
-  return array.filter(angka => angka.charAt(0) === asDigit);
-}
-
-function validasi() {
-  fetchData(() => {
-    const angkaMainList = getAngkaMain();
-    const hasil = [];
-    const asDigit = document.getElementById("asFilter").value;
-
-    angkaMainList.forEach(am => {
-      const cocokStr = am.join("");
-      let data4D = prediksi4D, data3D = prediksi3D, data2D = prediksi2D;
-
-      if (asDigit !== "") {
-        data4D = filterByAS(data4D, asDigit);
-        data3D = filterByAS(data3D, asDigit);
-        data2D = filterByAS(data2D, asDigit);
-      }
-
-      data4D.forEach(angka => { if (cocokDenganAngkaMain(angka, am)) hasil.push({ jenis: "4D", angka, cocok: cocokStr }); });
-      data3D.forEach(angka => { if (cocokDenganAngkaMain(angka, am)) hasil.push({ jenis: "3D", angka, cocok: cocokStr }); });
-      data2D.forEach(angka => { if (cocokDenganAngkaMain(angka, am)) hasil.push({ jenis: "2D", angka, cocok: cocokStr }); });
-    });
-
-    tampilkanHasil(hasil);
-  });
-}
-
-function filterAS() {
-  fetchData(() => {
-    const angkaMainList = getAngkaMain();
-    if (angkaMainList.length === 0) return alert("Masukkan angka main.");
-
-    const as = angkaMainList[0];
-    const cocokStr = as.join("");
-    const asDigit = document.getElementById("asFilter").value;
-    const hasil = [];
-
-    let data4D = prediksi4D, data3D = prediksi3D, data2D = prediksi2D;
-
-    if (asDigit !== "") {
-      data4D = filterByAS(data4D, asDigit);
-      data3D = filterByAS(data3D, asDigit);
-      data2D = filterByAS(data2D, asDigit);
+  <script>
+    const SPREADSHEET_ID = '18nXx5IcD80NT1xSkhNM4hcVmoxgzuhD0oioagDfBxBs';
+    const csvUrl = `https://docs.google.com/spreadsheets/d/${SPREADSHEET_ID}/export?format=csv&gid=0`;
+    
+    async function loadData() {
+      const res = await fetch(csvUrl);
+      const text = await res.text();
+      const lines = text.trim().split('\n').map(line => line.split(','));
+      const rows = lines.slice(1, 11); // baris 2–11
+      const data = rows.map(cols => ({
+        AS: cols[1], prediksi4D: cols[2], prediksi3D: cols[3], prediksi2D: cols[4]
+      }));
+      
+      populateSelect(data);
+      renderTable(data);
     }
 
-    data4D.forEach(angka => { if (cocokDenganAngkaMain(angka, as)) hasil.push({ jenis: "4D", angka, cocok: cocokStr }); });
-    data3D.forEach(angka => { if (cocokDenganAngkaMain(angka, as)) hasil.push({ jenis: "3D", angka, cocok: cocokStr }); });
-    data2D.forEach(angka => { if (cocokDenganAngkaMain(angka, as)) hasil.push({ jenis: "2D", angka, cocok: cocokStr }); });
+    function populateSelect(data) {
+      const select = document.getElementById('asSelect');
+      const uniqueAS = [...new Set(data.map(r => r.AS))];
+      uniqueAS.forEach(as => {
+        const opt = document.createElement('option');
+        opt.value = as;
+        opt.textContent = `AS ${as}`;
+        select.appendChild(opt);
+      });
+    }
 
-    tampilkanHasil(hasil);
-  });
-}
+    function renderTable(data) {
+      const tbody = document.getElementById('tableData').querySelector('tbody');
+      let filtered = data;
+      const sel = document.getElementById('asSelect').value;
+      if (sel) filtered = data.filter(r => r.AS === sel);
 
-function salinHasil() {
-  const tbody = document.getElementById("hasilTable").querySelector("tbody");
-  const rows = Array.from(tbody.querySelectorAll("tr"));
-  if (rows.length === 0) {
-    alert("Tidak ada hasil untuk disalin.");
-    return;
-  }
-
-  const text = rows.map(row => {
-    return Array.from(row.querySelectorAll("td")).map(td => td.textContent).join("\t");
-  }).join("\n");
-
-  navigator.clipboard.writeText(text)
-    .then(() => alert("Hasil berhasil disalin ke clipboard."))
-    .catch(err => alert("Gagal menyalin: " + err));
-}
-</script>
-
+      tbody.innerHTML = filtered.map(r =>
+        `<tr><td>${r.AS}</td><td>${r.prediksi4D}</td><td>${r.prediksi3D}</td><td>${r.prediksi2D}</td></tr>`
+      ).join('') || `<tr><td colspan="4">Tidak ada data</td></tr>`;
+    }
+  </script>
 </body>
 </html>
